--- a/builders.tex
+++ b/builders.tex
@@ -119,8 +119,6 @@ La Figura \ref{fig:ncl-instances-intro} muestra tres instancias de NodeCachingLi
     (7)  l.addFirst(3);
     (7)  l.addFirst(-1);
     \end{lstlisting}
-\pp{Secuencia de test incompleta, falta la lista sobre la que se aplica}
-\cacho{Listo todo esto}
 
 \item Figura (b):
     Esta instancia se logra agregando dos nodos a la lista principal y luego
@@ -135,8 +133,6 @@ La Figura \ref{fig:ncl-instances-intro} muestra tres instancias de NodeCachingLi
     (7)  l.addFirst(-1);
     (25) l.removeFirst();
     \end{lstlisting}
-\pp{Secuencia de test incompleta, falta la lista sobre la que se aplica}
-    
 
 \item Figura (c): 
     Esta instancia se genera añadiendo dos nodos al inicio y luego eliminándolos
@@ -150,7 +146,6 @@ La Figura \ref{fig:ncl-instances-intro} muestra tres instancias de NodeCachingLi
     (25) l.removeFirst();
     (25) l.removeFirst();
     \end{lstlisting}
-\pp{Secuencia de test incompleta, falta la lista sobre la que se aplica}
     
 \end{itemize}
 
@@ -377,9 +372,6 @@ lo que reduce de forma significativa el espacio de búsqueda de nuestros algorit
 
 Los métodos reportados como observadores por \emph{Infer} son descartados antes de comenzar la búsqueda de métodos generadores de objetos, y no se consideran en ninguna fase posterior del proceso.
 En síntesis, \emph{Infer} actúa como una etapa de preprocesamiento que combina eficiencia y utilidad práctica: permite reducir el número de métodos a analizar, sin necesidad de intervención manual, manteniendo un nivel de precisión suficiente para nuestros casos de estudio.
-%\cacho{Capaz falte alguna referencia donde nos diga que pasa esto}
-% De esta manera, \emph{Infer} es utilizado como paso previo a la ejecución de nuestros algoritmos. Los métodos reportados como observadores por \emph{Infer} se descartan antes de comenzar la búsqueda de métodos generadores de objetos.
-%\cacho{hasta aca}
 
 
 % 1- estados o configuraciones del problema
@@ -766,9 +758,7 @@ asignado, \texttt{S} (ver $S_1$ en la línea 2).
 La función \texttt{GenerarNuevasSecuencias} (líneas 9-35) es la encargada de
 producir estas secuencias de test. Esta función realiza su tarea utilizando 
 la estrategia de generación aleatoria descrita en la Sección
-\ref{sec:feedback-directed-test-gen}, basada en el enfoque de Randoop. \pp{Otra
-vez mucho espacio antes del un algoritmo, casi una página en blanco. Quitar este
-espacio!} \cacho{resuelto}
+\ref{sec:feedback-directed-test-gen}, basada en el enfoque de Randoop. 
 
 \begin{algorithm}[htbp]
     \small
@@ -909,8 +899,7 @@ entrada, se generan suites de tests que luego son ejecutadas para analizar su
 cobertura.
 En este caso, asumiendo un solo hilo para simplificar ($k=1$), la cobertura \(Cob\), se computa a partir de la proporción de líneas 
 cubiertas respecto del total de líneas (232) y de la proporción de ramas cubiertas respecto del total de ramas (132),
-asignando un peso de 0.4 a las líneas y de 0.6 a las ramas. \pp{según la fórmula anterior es 0.4 * lineas y 0.6 por
-ramas. Corregir los números en este párrafo.}. \cacho{Modifique este parrafo }
+asignando un peso de 0.4 a las líneas y de 0.6 a las ramas.
 Con \( M_1 \) se cubrieron 192 líneas y 101 ramas (\(Cob(M_1) = 0.77\)), mientras
 que con \( M_2 \) se cubrieron 175 líneas y 97 ramas (\(Cob(M_2) = 0.74\)).
 
@@ -920,7 +909,7 @@ que con \( M_2 \) se cubrieron 175 líneas y 97 ramas (\(Cob(M_2) = 0.74\)).
 %En cuanto a los parámetros, ambos conjuntos tienen la misma complejidad de parámetros, ya que ambos conjuntos incluyen únicamente el método \texttt{addFirst(Object)}, cuyo único parámetro es de tipo \texttt{Object}, con un peso de 6 según la Tabla \ref{fig:rankParameters}. 
 %Los demás métodos no tienen parámetros. Por lo tanto, el peso total de parámetros en ambos conjuntos es \( W(M_1) = W(M_2) = 6 \), y como el peso total de la API es \( W(API) = 72 \), se obtiene \( P = 72 - 6 = 66 \) en ambos casos.
 %
-Como el conjunto \( M_1 \) logra una mejor cobertura, y por lo tanto:
+El conjunto \( M_1 \) logra una mejor cobertura y por lo tanto:
 
 \[
 f(M_1) > f(M_2)
@@ -1447,7 +1436,7 @@ private static TreeMap<Integer, Integer> generateStructure(int scope) {
             case 13:
                 t.pollLastEntry();
                 break;
-            ...     /* (*@m\'etodos omitidos@*) */
+            /* (*@m\'etodos omitidos@*) */
             case 66:
                 t.entrySet();
                 break;
@@ -1457,10 +1446,8 @@ private static TreeMap<Integer, Integer> generateStructure(int scope) {
 }
 \end{lstlisting}
 \end{minipage}
-\pp{Por qué los puntos suspensivos? Habría que poner un comentario que diga
-    métodos omitidos o algo así. Se corta la figura. Mismo problema que en la
-sección de preliminares de JPF.}
-\cacho{Agregue el ultimo y el comentario}
+\pp{El comentario en verde, y fijate que deja una hoja arriba casi completa
+libre.}
 
 Por ejemplo, la Figura \ref{lst:driverAPI} muestra un driver para generar todos
 los posibles \texttt{TreeMap}s con hasta \texttt{scope} nodos, con elementos
