--- a/beapi.tex
+++ b/beapi.tex
@@ -783,7 +783,7 @@ secuencias que BEAPI necesita explorar, mejorando significativamente la
 eficiencia de la técnica.
 
 En el contexto de \textsf{BEAPI}, utilizamos el algoritmo de búsqueda basado en
-\emph{escalada de colinas} (ver Sección \ref{sec:approachHC}), que logra un mejor rendimiento en tiempo de
+\emph{escalada de colinas} (ver Sección \ref{alg:approachHC}), que logra un mejor rendimiento en tiempo de
 ejecución. 
 Aunque la \emph{escalada de colinas} puede ser menos preciso en algunos casos,
 ya que puede incluir algunos métodos que no son necesarios entre los generadores
