--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 %\renewcommand{\bibliographyname}{Bibliografía}
 \usepackage[table]{colortbl}
 \usepackage{makecell}
+\usepackage{needspace}
 
 
 \usepackage{titletoc}
@@ -94,10 +95,10 @@
       	columns=flexible,
       	basicstyle={\scriptsize\ttfamily}, 
         keywordstyle=\color{blue}\bfseries,
-        commentstyle=\color{dkgreen},
         morekeywords={,input, output, return, datatype, function, in, if, then, else, foreach, while, begin, end, inputs, outputs, procedure, for, do, done, fi, break, not, local, continue, and,} %add the keywords you want, or load a language as Rubens explains in his comment above.
         numbers=left,
         escapeinside={(*@}{@*)},
+        commentstyle=\color{green!60!black},
         xleftmargin=.05\textwidth
       }
 
