--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -623,7 +623,7 @@ private static LinkedList generateStructure(int scope) {
             case 14:
                 list.clear();
                 break;
-            /* (*@m\'etodos omitidos@*) */
+            ...     /* metodos omitidos */
             case 66:
                 list.empty();
                 break;
